Set up testing. Build in gitlab CI