@@ -3,10 +3,6 @@ plugins {
     id 'application'
 }
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.addAll('--enable-preview', '-Xlint:preview')
-}
-
 ext {
     group = 'dev.tomek'
     sourceCompatibility = 15
@@ -24,11 +20,14 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:1.2.3"
     compileOnly "org.projectlombok:lombok:$lombokVersion"
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
+
+    testImplementation platform('org.junit:junit-bom:5.7.1')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.assertj:assertj-core:3.19.0'
 }
 
 application {
     mainClass = project.mainClassName
-    applicationDefaultJvmArgs = ['--enable-preview']
 }
 
 jar {
@@ -38,4 +37,8 @@ jar {
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
+}
+
+test {
+    useJUnitPlatform()
 }
